--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://us-central1-editor-c70eb.cloudfunctions.net/api"
+  "proxy": "http://localhost:5000/editor-c70eb/us-central1/api"
 }
