--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "1.12.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-draggable": "^4.4.2",
     "react-flip-page": "^1.6.0",
     "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0",
@@ -42,5 +43,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://us-central1-editor-c70eb.cloudfunctions.net/api"
+  "proxy": "http://localhost:5000/editor-c70eb/us-central1/api",
+  "homepage": "https://editor-c70eb.web.app/"
 }
