--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/editor-c70eb/us-central1/api",
+  "proxy": "https://us-central1-editor-c70eb.cloudfunctions.net/api",
   "homepage": "https://editor-c70eb.web.app/"
 }
