--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "booklet-react-component": "^0.1.1",
+    "default-props": "^0.1.1",
     "jquery": "1.12.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
